Fix Modal Ads on Mobile

--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -99,7 +99,7 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    padding: 0 4px;
+    /* padding: 0 4px; */
     margin-top: 0 !important;
     box-shadow: 0px 1px 2px rgb(0 0 0 / 20%);
     background-color: white;
